# luminostech-lumohub

./: .gitignore  CLAUDE.md  README.md  audio_fix_notes.md  docker-compose.dev.yml  docker-compose.yml  dump.sql  test.py  test_audio.py  test_esp32_ws.py  test_website_send.py  test_ws.py
backend/: .env.example  alembic.ini  pyrightconfig.json  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_devices.py  0003_add_event_buttons.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  device.py  event.py  event_button.py  log.py  notification.py  push_subscription.py  reminder.py  session.py  (+1 more)
frontend-web/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  nginx.conf  package-lock.json  package.json  replace_colors.ps1  tailwind.config.js  tsconfig.tsbuildinfo
frontend-web/public/: manifest.json  sw.js
iot/: CMakeLists.txt  README.md  audio_player_library_docs.md  oled_library_v_1_0_docs.md  partitions.csv  sdkconfig  sdkconfig.old
iot/main/: CMakeLists.txt  Lumo-LuminosTech.c  idf_component.yml
iot/main/audio/: audio_player.c  audio_player.h  audio_stream.c  audio_stream.h
iot/main/button/: button.c  button.h
iot/main/certs/: server_cert.pem
iot/main/http_api/: http_api.c  http_api.h
iot/main/mic/: mic.c  mic.h
iot/main/oled/: oled.c  oled.h
iot/main/oled/font5x7/: font5x7.h
iot/main/record/: record.c  record.h
iot/main/wifi/: web_portal.c  web_portal.h  wifi_manager.c  wifi_manager.h
iot/main/ws/: ws_client.c  ws_client.h
(+109 files in other folders)
